# 4xClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
data/models/: hut.mtl
data/shaders/: outline.frag  phong_texture.frag  simple.frag  simple.vert  simple_color.frag  simple_color.vert  simple_perspective.vert  simple_phong.frag  simple_phong.vert  simple_texture.vert  simple_transform.vert  simple_uniform_color.frag
include/: camera.h  circular_buffer.h  client_util.h  geometry.h  gl.h  glm_hex.h  hex.h  light.h  log.h  map.h  mesh.h  network.h  program.h  prop.h  raycast.h  selection.h  shader.h  sim_interface.h  ui.h  util.h
notes/: gl_notes.txt  gl_notes2.txt  gl_notes3.txt
src/: CMakeLists.txt  camera.cpp  geometry.cpp  gl.cpp  hex.cpp  light.cpp  log.cpp  main.cpp  map.cpp  mesh.cpp  network.cpp  program.cpp  prop.cpp  raycast.cpp  selection.cpp  shader.cpp  sim_interface.cpp  texloader.cpp  ui.cpp
src/e4x/: CMakeLists.txt
src/e4x/include/: camera.h  e4x.h  geometry.h  light.h  log.h  mesh.h  shader.h  texloader.h
src/e4x/src/: CMakeLists.txt  geometry.cpp  gl.cpp  glm_hex.cpp  imgui_demo.cpp  light.cpp  log.cpp  prop.cpp  texloader.cpp
